Fix: réglage contrast aux normes

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -148,12 +148,12 @@ a {
   --contact--errors--fontSize: 1.6rem;
   --contact--errors--color: #{var.$dark-color};
   --contact--input--color: #{var.$light-color};
-  --contact--input--bg: #{var.$primary-color};
+  --contact--input--bg: #{var.$four-color};
   --contact--placeHolder--fontSize: 1.5rem;
   --contact--placeHolder--color: #{var.$light-color};
   --contact--send--fontSize--desktop: 2.2rem;
   --contact--send--fontSize--mobile: 1.8rem;
-  --contact--send--bg: #{var.$primary-color};
+  --contact--send--bg: #{var.$four-color};
   --contact--send--color: #{var.$light-color};
   --contact--elipse--borderColor: #{var.$four-color};
   /* Download Button cv */
@@ -265,7 +265,7 @@ a {
   --contact--input--color: #{var.$dark-color};
   --contact--input--bg: #{var.$four-color};
   --contact--placeHolder--color: #{var.$light-color};
-  --contact--send--bg: #{var.$primary-color};
+  --contact--send--bg: #{var.$four-color};
   --contact--send--color: #{var.$light-color};
   --contact--elipse--borderColor: #{var.$light-color};
   /* Footer */
