--- a/app/styles/utils/variables.scss
+++ b/app/styles/utils/variables.scss
@@ -3,7 +3,7 @@
 $primary-color: #6c6e8d;
 $second-color: #4e148c;
 $third-color: #70c197;
-$four-color: #7d90ae;
+$four-color: #61728c;
 $five-color: #1e4481;
 $light-color: white;
 $dark-color: black;
@@ -17,18 +17,6 @@ $h2-title-mobile: 3.4rem;
 $archivo: var(--font--archivo);
 $oswald: var(--font--oswald);
 $inter: var(--font--inter);
-
-$html: rgb(211, 100, 60);
-$css: rgb(26, 99, 208);
-$sass: rgb(170, 80, 139);
-$github: rgb(198, 209, 226);
-$seo: rgb(200, 111, 169);
-$javascript: rgb(230, 212, 8);
-$nodejs: rgb(31, 162, 57);
-$react: rgb(60, 147, 218);
-$typescript: rgb(60, 147, 218);
-$mongodb: #228a66;
-$nextjs: #64b297;
 
 /***************************************************************************************/
 // -- Radius -- //
